test/errors/packages_error/zs/bad_package_name.zs
// This is error during import because this package must have name 'bad_package_name'.
package bad_really_bad;
